--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blurry Loading</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="img-container"></div>
+    <div class="counter"><h1></h1></div>
+    <script src="./app.js"></script>
 </body>
 </html>
